header overlapse fix

--- a/assets/css/custom/_layout.scss
+++ b/assets/css/custom/_layout.scss
@@ -22,15 +22,17 @@
 
 }
 
-.content {
-
-  display: flex;
-  margin-top: 7em;
+.header-fluid {
+  padding-bottom: 7em;
+  z-index: -1;
 
   @media only screen and (max-width: $bp-large) {
-    margin-top: 11rem;
+    padding-bottom: 11rem;
   }
+}
 
+.content {
+  display: flex;
 
   @media only screen and (max-width: $bp-medium){
     flex-direction: column;
